--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="task">
             <h3>Задача 2</h3>
             <p>Найдите периметр прямоугольника с длиной сторон 3 см и 4 см.</p>
-            <img src="C:\Users\eduar\Desktop\Сайт\1200px-Triangle-equilateral.svg.png" alt="Решение прямоугольника">
+            <img src="images\Tri.png" alt="Решение прямоугольника">
             <button onclick="toggleAnswer(2)">Ответ</button>
             <div id="answer-2" class="answer">
                 <p>Ответ: 14 см</p>
