--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             display: flex;
             flex-direction: column;
             min-height: 100vh;
-        }
+		}
         header {
             display: flex;
             justify-content: space-between;
@@ -75,7 +75,6 @@
     </script>
 </head>
 <body>
-
 <header>
     <div class="site-title">Задачи и решения</div>
     <div>
@@ -94,7 +93,7 @@
             <button onclick="toggleAnswer(1)">Ответ</button>
             <div id="answer-1" class="answer">
                 <p>Ответ: 4</p>
-                <p>Решение: 2 + 2 = 4</p>
+                <p>Решение: \(2 + 2 = 4\)</p>
             </div>
         </div>
 
@@ -106,7 +105,7 @@
             <button onclick="toggleAnswer(2)">Ответ</button>
             <div id="answer-2" class="answer">
                 <p>Ответ: 14 см</p>
-                <p>Решение: \P = 2 * (a + b) = 2 * (3 + 4) = 14 см\</p>
+                <p>Решение: \(P = 2 * (a + b) = 2 * (3 + 4) = 14 см\)</p>
             </div>
         </div>
     </div>
