--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <button onclick="toggleAnswer(2)">Ответ</button>
             <div id="answer-2" class="answer">
                 <p>Ответ: 14 см</p>
-                <p>Решение: \(P = 2 * (a + b) = 2 * (3 + 4) = 14 см\)</p>
+                <p>Решение: \(P = 2 * (a + b) = 2 * (3 + 4) = 14\) см</p>
             </div>
         </div>
     </div>
