--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             padding: 0.5rem 1rem;
             border: none;
             cursor: pointer;
+			border-radius: 4px;
         }
         button:hover {
             background-color: #45a049;
@@ -89,11 +90,11 @@
         <!-- Пример задачи 1 -->
         <div class="task">
             <h3>Задача 1</h3>
-            <p>Сколько будет \(2 + 2\)?</p>
+            <p>Докажите, что \(300^{3000} - 1\) делится на 1001.</p>
             <button onclick="toggleAnswer(1)">Ответ</button>
             <div id="answer-1" class="answer">
-                <p>Ответ: 4</p>
-                <p>Решение: \(2 + 2 = 4\)</p>
+                <p>Ответ: Доказательство существует</p>
+                <p>Решение: Исходное число должно делиться на 7, 11, 13. Тогда по малой теореме Ферма: \(300^{3000}=(300^{500})^6≡1(mod 7)\), аналогично : \(300^{3000}≡1 (mod 11)\)  и \(1 (mod 13)\). Следовательно, \(300^{3000}-1\) делится на 1001. Что и требовалось доказать.</p>
             </div>
         </div>
 
@@ -101,7 +102,7 @@
         <div class="task">
             <h3>Задача 2</h3>
             <p>Найдите периметр прямоугольника с длиной сторон 3 см и 4 см.</p>
-            <img src="images\Tri.png" alt="Решение прямоугольника">
+            <img src="images\z2.jpg" alt="Рисунок к задаче 2">
             <button onclick="toggleAnswer(2)">Ответ</button>
             <div id="answer-2" class="answer">
                 <p>Ответ: 14 см</p>
@@ -109,7 +110,17 @@
             </div>
         </div>
     </div>
-
+		<!-- Пример задачи 3 -->
+        <div class="task">
+            <h3>Задача 3</h3>
+            <p>На наибольшей стороне AB треугольника ABC взяли такие точки P и Q, что AQ = AC, BP = BC. Докажите, что центр описанной окружности треугольника PQC совпадает с центром вписанной окружности треугольника ABC.</p>
+            <img src="images\z3.gif" alt="Рисунок к задаче 3">
+            <button onclick="toggleAnswer(2)">Ответ</button>
+            <div id="answer-2" class="answer">
+                <p>Ответ: Доказательство существует</p>
+                <p>Решение: Треугольник BPC – равнобедренный, поэтому биссектриса угла B совпадает с серединным перпендикуляром к стороне CP. Аналогично биссектриса угла A совпадает с серединным перпендикуляром к отрезку CQ. Но центр вписанной окружности треугольника ABC лежит на пересечении упомянутых биссектрис, а центр описанной окружности треугольника PQC – на пересечении упомянутых серединных перпендикуляров.</p>
+            </div>
+        </div>
     <!-- Блок "О нас" -->
     <div id="about">
         <h2>О нас</h2>
