--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="site-title">Задачи и решения</div>
     <div>
         <button onclick="scrollToElement('about')">О нас</button>
-        <button onclick="scrollToElement('contacts')">Контакты</button>
+        <button onclick="scrollToElement('footer-contacts')">Контакты</button>
     </div>
 </header>
 
@@ -124,25 +124,25 @@
     <!-- Блок "О нас" -->
     <div id="about">
         <h2>О нас</h2>
-        <p>Мы команда опытных учителей и преподавателей математики, которые любят делиться своим знаниями и помогать студентам достигать успеха.</p>
+        <p>Мы команда опытных учителей и преподавателей математики, которые любят делиться своим знаниями и помогать студентам достигать успеха. А на самом деле это часть ВКР студента 5 курса Института математики и компьютерных наук</p>
     </div>
 
     <!-- Блок "Контакты" -->
     <div id="contacts">
         <h2>Контакты</h2>
-        <p>Вы можете связаться с нами по электронной почте math@example.com или по телефону +7 (999) 123-45-67.</p>
+        <p>Вы можете связаться с нами по электронной почте hotim_postupit_v_fmsh_za_dve_nedeli@example.com или по телефону +7 (999) 123-45-67.</p>
     </div>
 </main>
 
 <footer>
     <div id="footer-about">
-        <h2>О нас</h2>
-        <p>Мы команда опытных учителей и преподавателей математики, которые любят делиться своим знаниями и помогать студентам достигать успеха.</p>
+        <h2>Запись</h2>
+        <p>Вы можете записаться на индвидуальное или группове репетиторство по телефону справа.</p>
     </div>
 
     <div id="footer-contacts">
         <h2>Контакты</h2>
-        <p>Вы можете связаться с нами по электронной почте math@example.com или по телефону +7 (999) 123-45-67.</p>
+        <p>Вы можете связаться с нами по электронной почте hotim_postupit_v_fmsh_za_dve_nedeli@example.com или по телефону +7 (999) 123-45-67.</p>
     </div>
 </footer>
 
