--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
     <div id="footer-contacts">
         <h2>Контакты</h2>
-        <p>Вы можете связаться с нами по электронной почте hotim_postupit_v_fmsh_za_dve_nedeli@example.com или по телефону +7 (999) 123-45-67.</p>
+        <p>Вы можете связаться с нами по электронной почте neMatematik_a_Pedagog@example.com или по телефону +7 (999) 123-45-67.</p>
     </div>
 </footer>
 
