--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" href="images\icon.jpg" type="image/x-icon">
     <title>Задачи и решения</title>
     <style>
         body {
