--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </head>
 <body>
 <header>
-    <div class="site-title">Задачи и решения</div>
+    <div class="site-title">Сборник задач для школьников и учителей</div>
     <div>
         <button onclick="scrollToElement('about')">О нас</button>
         <button onclick="scrollToElement('footer-contacts')">Контакты</button>
