--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" href="images\icon.jpg" type="image/png">
+	<link rel="icon" href="images\icon.png" type="image/png">
     <title>Сборник задач для школьников и учителей</title>
     <style>
         body {
