--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <!-- Блок "О нас" -->
     <div id="about">
         <h2>О нас</h2>
-        <p>Мы команда опытных учителей и преподавателей математики, которые любят делиться своим знаниями и помогать студентам достигать успеха. А на самом деле это часть ВКР студента 5 курса Института математики и компьютерных наук</p>
+        <p>Мы команда опытных учителей математики, которые любят делиться своим знаниями и помогать ученикам достигать успеха. А на самом деле это часть ВКР студента 5 курса Института математики и компьютерных наук</p>
     </div>
     
 </main>
