--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
     <div id="footer-contacts">
         <h2>Контакты</h2>
-        <p>Вы можете связаться с нами по электронной почте neMatematik_a_Pedagog@example.com или по телефону +7 (999) 123-45-67.</p>
+        <p>Вы можете связаться с нами по электронной почте h_e@dot.com или по телефону +7 (999) 123-45-67.</p>
     </div>
 </footer>
 
