--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
     <div class="tasks">
         <!-- Пример задачи 1 -->
         <div class="task">
-            <h3>Задача 1</h3>
-            <p>Докажите, что \(300^{3000} - 1\) делится на 1001.</p>
+            <h3>Задача 1 (неравенство Коши о средних)</h3>
+            <p>Докажите, что \(((n+1)/2)^{n}\) при n \in N, n \ge 2.</p>
             <button onclick="toggleAnswer(1)">Ответ</button>
             <div id="answer-1" class="answer">
-                <p>Ответ: Доказательство существует</p>
-                <p>Решение: Исходное число должно делиться на 7, 11, 13. Тогда по малой теореме Ферма: \(300^{3000}=(300^{500})^6≡1(mod 7)\), аналогично : \(300^{3000}≡1 (mod 11)\)  и \(1 (mod 13)\). Следовательно, \(300^{3000}-1\) делится на 1001. Что и требовалось доказать.</p>
+                <p>применим неравенство Коши о среднем геометрическом и среднем арифметическом. Применим формулу суммы арифметической прогрессии к левой части, получим 1/n∙n(n+1)/2=(n+1)/2≥√(n&1∙2∙3∙…∙n) То есть (n+1)/2≥√(n&n!)→((n+1)/2)^n≥n!.
+.</p>
             </div>
         </div>
 
