--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
         <!-- Пример задачи 1 -->
         <div class="task">
             <h3>Задача 1 (неравенство Коши о средних)</h3>
-            <p>Докажите, что \((\frac{n+1}{2})^n \ge n!  при  n \in N, n \ge 2\).</p>
+            <p>Докажите, что \((\frac{n+1}{2})^n \ge n!\)  при  \(n \in N, n \ge 2\).</p>
             <button onclick="toggleAnswer(1)">Ответ</button>
             <div id="answer-1" class="answer">
-                <p>Применим неравенство Коши о среднем геометрическом и среднем арифметическом. Применим формулу суммы арифметической прогрессии к левой части, получим \(1/n∙n(n+1)/2=(n+1)/2≥√(n&1∙2∙3∙…∙n)\) То есть (n+1)/2≥√(n&n!)→((n+1)/2)^n≥n!.
+                <p>Применим неравенство Коши о среднем геометрическом и среднем арифметическом. Применим формулу суммы арифметической прогрессии к левой части, получим \(\frac 1n * frac{n(n+1)}{2} = \frac{n+1}{2} \). $$\\frac{1}{n} \\cdot \\frac{n(n+1)}{2} = \\frac{n+1}{2} \\geq \\sqrt{n!}$$</p> 
 .</p>
             </div>
         </div>
