--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <p>Докажите, что \((\frac{n+1}{2})^n \ge n!\)  при  \(n \in N, n \ge 2\).</p>
             <button onclick="toggleAnswer(1)">Ответ</button>
             <div id="answer-1" class="answer">
-                <p>Применим неравенство Коши о среднем геометрическом и среднем арифметическом. Применим формулу суммы арифметической прогрессии к левой части, получим \(\frac 1n \cdot \frac{n(n+1)}{2} = \frac{n+1}{2} \). \( \frac{1}{n} \cdot \frac{n(n+1)}{2} = \frac{n+1}{2} \geq {\1 \cdot 2 \cdot\ 3 \cdot ... \cdot n}^{1/n}\).</p> 
+                <p>Применим неравенство Коши о среднем геометрическом и среднем арифметическом. Применим формулу суммы арифметической прогрессии к левой части, получим \(\frac 1n \cdot \frac{n(n+1)}{2} = \frac{n+1}{2} \ge \sqrt[n]{\1 \cdot 2 \cdot\ 3 \cdot ... \cdot n}\).</p> 
 .</p>
             </div>
         </div>
