--- a/index.html
+++ b/index.html
@@ -94,20 +94,19 @@
             <p>Докажите, что \((\frac{n+1}{2})^n \ge n!\)  при  \(n \in N, n \ge 2\).</p>
             <button onclick="toggleAnswer(1)">Ответ</button>
             <div id="answer-1" class="answer">
-                <p>Применим неравенство Коши о среднем геометрическом и среднем арифметическом. Применим формулу суммы арифметической прогрессии к левой части, получим \(\frac 1n \cdot \frac{n(n+1)}{2} = \frac{n+1}{2} \ge \sqrt[n]{\1 \cdot 2 \cdot\ 3 \cdot ... \cdot n}\).</p> 
-.</p>
+                <p>Применим неравенство Коши о среднем геометрическом и среднем арифметическом. Применим формулу суммы арифметической прогрессии к левой части, получим \(\frac 1n \cdot \frac{n(n+1)}{2} = \frac{n+1}{2} \ge \sqrt[n]{1 \cdot 2 \cdot\ 3 \cdot ... \cdot n}\). То есть \( \frac{n+1}{2} \ge \sqrt[n]{n!} \to \frac{n+1}{2})^n \ge n!.</p>
             </div>
         </div>
 
         <!-- Пример задачи 2 -->
         <div class="task">
-            <h3>Задача 2</h3>
-            <p>Найдите периметр прямоугольника с длиной сторон 3 см и 4 см.</p>
+            <h3>Задача 2 (оценка плюс пример, задача Адамара о максимальном детерминанте)</h3>
+            <p>Найдите максимальный определитель матрицы, состоящей только из 0 и 1.</p>
             <img src="images\z2.jpg" alt="Рисунок к задаче 2">
             <button onclick="toggleAnswer(2)">Ответ</button>
             <div id="answer-2" class="answer">
-                <p>Ответ: 14 см</p>
-                <p>Решение: \(P = 2 * (a + b) = 2 * (3 + 4) = 14\) см</p>
+                <p>Ответ: 2</p>
+                <p>Решение: Оценка. Сделаем оценку: для оценки максимального значения определителя бинарной матрицы 3×3, воспользуемся оценкой Адамара для бинарной матрицы (0,1): \(P = 2 * (a + b) = 2 * (3 + 4) = 14\) см</p>
             </div>
         </div>
     </div>
