--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <p>Докажите, что \((\frac{n+1}{2})^n \ge n!\)  при  \(n \in N, n \ge 2\).</p>
             <button onclick="toggleAnswer(1)">Ответ</button>
             <div id="answer-1" class="answer">
-                <p>Применим неравенство Коши о среднем геометрическом и среднем арифметическом. Применим формулу суммы арифметической прогрессии к левой части, получим \(\frac 1n \cdot \frac{n(n+1)}{2} = \frac{n+1}{2} \ge \sqrt[n]{1 \cdot 2 \cdot\ 3 \cdot ... \cdot n}\). То есть \( \frac{n+1}{2} \ge \sqrt[n]{n!} \to \frac{n+1}{2})^n \ge n! \).</p>
+                <p>Применим неравенство Коши о среднем геометрическом и среднем арифметическом. Применим формулу суммы арифметической прогрессии к левой части, получим \(\frac 1n \cdot \frac{n(n+1)}{2} = \frac{n+1}{2} \ge \sqrt[n]{1 \cdot 2 \cdot\ 3 \cdot ... \cdot n}\). То есть \( \frac{n+1}{2} \ge \sqrt[n]{n!} \to (\frac{n+1}{2})^n \ge n! \).</p>
             </div>
         </div>
 
@@ -106,7 +106,8 @@
             <button onclick="toggleAnswer(2)">Ответ</button>
             <div id="answer-2" class="answer">
                 <p>Ответ: 2</p>
-                <p>Решение: Оценка. Сделаем оценку: для оценки максимального значения определителя бинарной матрицы 3×3, воспользуемся оценкой Адамара для бинарной матрицы (0,1): \(P = 2 * (a + b) = 2 * (3 + 4) = 14\) см</p>
+                <p>Решение: Оценка. Сделаем оценку: для оценки максимального значения определителя бинарной матрицы 3×3, воспользуемся оценкой Адамара для бинарной матрицы (0,1): \( \left| detA  \right|\le \frac{(n+1)^{\frac{n+1}{2}}}{2^n}. \) Для нашего случая максимальное значения определителя бинарной матрицы равно 2.</p>
+				<p>         Пример.Приведём пример бинарной матрицы 3×3 с элементами 0 и 1, определителя равным 2. Заметим, что в любом случае при подсчёте определителя, одно из слагаемых будет равным -1. Наша задача сводится к тому, чтобы таких слагаемых было не более одного или не было вовсе. $$detA = \begin{vmatrix}1 & 0 & 1 \\1 & 1 & 0 \\0 & 1 & 1 \end{vmatrix} = 2.$$ </p>
             </div>
         </div>
     </div>
