--- a/index.html
+++ b/index.html
@@ -102,12 +102,21 @@
         <div class="task">
             <h3>Задача 2 (оценка плюс пример, задача Адамара о максимальном детерминанте)</h3>
             <p>Найдите максимальный определитель матрицы, состоящей только из 0 и 1.</p>
-            <img src="images\z2.jpg" alt="Рисунок к задаче 2">
             <button onclick="toggleAnswer(2)">Ответ</button>
             <div id="answer-2" class="answer">
                 <p>Ответ: 2</p>
                 <p>Решение: Оценка. Сделаем оценку: для оценки максимального значения определителя бинарной матрицы 3×3, воспользуемся оценкой Адамара для бинарной матрицы (0,1): \( \left| detA  \right|\le \frac{(n+1)^{\frac{n+1}{2}}}{2^n}. \) Для нашего случая максимальное значения определителя бинарной матрицы равно 2.</p>
 				<p>         Пример.Приведём пример бинарной матрицы 3×3 с элементами 0 и 1, определителя равным 2. Заметим, что в любом случае при подсчёте определителя, одно из слагаемых будет равным -1. Наша задача сводится к тому, чтобы таких слагаемых было не более одного или не было вовсе. $$detA = \begin{vmatrix}1 & 0 & 1 \\1 & 1 & 0 \\0 & 1 & 1 \end{vmatrix} = 2.$$ </p>
+            </div>
+        </div>
+		<!-- Пример задачи 3 -->
+        <div class="task">
+            <h3>Задача 3 (Метод сложения)</h3>
+            <p>Найдите решения системы: $$\left\{ \begin{array}{cl} a(b+c)=35, \\ b(a+c)=32, \\ c(a+b)=27. \end{array} \right.$$</p>
+            <button onclick="toggleAnswer(2)">Ответ</button>
+            <div id="answer-2" class="answer">
+                <p>Ответ: (-5,-4,-3),(5,4,3)</p>
+                <p>Решение: заменим переменные  \( a_{1}=bc,\:b_{1}=ac,\:c_{1}=ab. \) Для того, чтобы найти \(a_{1}\), необходимо сложить второе и третье уравнения и вычесть из них первое. Получим \(a_{1}=(32+27-35):2=12.\) Находим \(b_{1}=12 \: c_{1}=20.\) Тогда, \(bc=12, \: ac=15, \: ab=20.\) Следовательно \(a^2=\frac{(ab)(ac)}{bc}=25 /to a=\pm 5, \: b=\frac{20}{a} \to b=\pm 4, \: c=\frac{15}{a}=\pm 3 \) Получили два решения (-5,-4,-3),(5,4,3). </p>
             </div>
         </div>
     </div>
