--- a/index.html
+++ b/index.html
@@ -113,12 +113,22 @@
         <div class="task">
             <h3>Задача 3 (Метод сложения)</h3>
             <p>Найдите решения системы: $$\left\{ \begin{array}{cl} a(b+c)=35, \\ b(a+c)=32, \\ c(a+b)=27. \end{array} \right.$$</p>
-            <button onclick="toggleAnswer(2)">Ответ</button>
-            <div id="answer-2" class="answer">
+            <button onclick="toggleAnswer(3)">Ответ</button>
+            <div id="answer-3" class="answer">
                 <p>Ответ: (-5,-4,-3),(5,4,3)</p>
                 <p>Решение: заменим переменные  \( a_{1}=bc,\:b_{1}=ac,\:c_{1}=ab. \) Для того, чтобы найти \(a_{1}\), необходимо сложить второе и третье уравнения и вычесть из них первое. Получим \(a_{1}=(32+27-35):2=12.\) Находим \(b_{1}=12 \: c_{1}=20.\) Тогда, \(bc=12, \: ac=15, \: ab=20.\) Следовательно \(a^2=\frac{(ab)(ac)}{bc}=25 /to a=\pm 5, \: b=\frac{20}{a} \to b=\pm 4, \: c=\frac{15}{a}=\pm 3 \) Получили два решения (-5,-4,-3),(5,4,3). </p>
             </div>
         </div>
+		<!-- Пример задачи 4 -->
+        <div class="task">
+            <h3>Задача 3 (Классы вычетов, сравнимость)</h3>
+            <p>Докажите, что вычет по \(m=7\) является группой.</p>
+            <button onclick="toggleAnswer(4)">Ответ</button>
+            <div id="answer-4" class="answer">
+                <p>Ответ: (-5,-4,-3),(5,4,3)</p>
+                <p>Решение: заменим переменные  \( a_{1}=bc,\:b_{1}=ac,\:c_{1}=ab. \) Для того, чтобы найти \(a_{1}\), необходимо сложить второе и третье уравнения и вычесть из них первое. Получим \(a_{1}=(32+27-35):2=12.\) Находим \(b_{1}=12 \: c_{1}=20.\) Тогда, \(bc=12, \: ac=15, \: ab=20.\) Следовательно \(a^2=\frac{(ab)(ac)}{bc}=25 /to a=\pm 5, \: b=\frac{20}{a} \to b=\pm 4, \: c=\frac{15}{a}=\pm 3 \) Получили два решения (-5,-4,-3),(5,4,3). </p>
+            </div>
+        </div>	
     </div>
 		<!-- Пример задачи 3 -->
         <div class="task">
