--- a/index.html
+++ b/index.html
@@ -121,13 +121,18 @@
         </div>
 		<!-- Пример задачи 4 -->
         <div class="task">
-            <h3>Задача 3 (Классы вычетов, сравнимость)</h3>
+            <h3>Задача 4 (Классы вычетов, сравнимость)</h3>
             <p>Докажите, что вычет по \(m=7\) является группой.</p>
             <button onclick="toggleAnswer(4)">Ответ</button>
             <div id="answer-4" class="answer">
-                <p>Ответ: (-5,-4,-3),(5,4,3)</p>
-                <p>Решение: заменим переменные  \( a_{1}=bc,\:b_{1}=ac,\:c_{1}=ab. \) Для того, чтобы найти \(a_{1}\), необходимо сложить второе и третье уравнения и вычесть из них первое. Получим \(a_{1}=(32+27-35):2=12.\) Находим \(b_{1}=12 \: c_{1}=20.\) Тогда, \(bc=12, \: ac=15, \: ab=20.\) Следовательно \(a^2=\frac{(ab)(ac)}{bc}=25 /to a=\pm 5, \: b=\frac{20}{a} \to b=\pm 4, \: c=\frac{15}{a}=\pm 3 \) Получили два решения (-5,-4,-3),(5,4,3). </p>
-            </div>
+                <p>Решение: для решения выпишем все классы вычетов: $$\bar{0} = \{…,-21,-14,-7,0,7,14,21,…}\,$$ $$ \bar{1} = \{…,-20,-13,-6,1,8,15,22,…}\,$$ \bar{2} = \{…,-19,-12,-5,2,9,16,23,…}\,$$ $$ \bar{3} = \{…,-18,-11,-4,3,10,17,24,…}\,$$ $$ \bar{4} = \{…,-17,-10,-3,4,11,18,25,…}\,$$ $$ \bar{5} = \{…,-16,-9,-2,5,12,19,26,…}\,$$ $$ \bar{6} = \{…,-15,-8,-1,6,13,20,27,…}\,$$ </p>
+				<p> Можно заметить, что выполняются все три аксиомы группы:<p>
+				<ol start="1">
+					<li>Ассоциативность: она определена на множестве целых чисел, не выходим из множества<\li>
+					<li>Нейтральный элемент: \( \bar{0}+\bar{a}=\bar{a}+\bar{0}=\bar{a} \)<\li>
+					<li>Обратный элемент: \( \bar{1}+\bar{6}=\bar{0} \).<\li>
+				<img src="images\z4.png" alt="Рисунок к задаче 4">
+			</div>
         </div>	
     </div>
 		<!-- Пример задачи 3 -->
