--- a/index.html
+++ b/index.html
@@ -128,9 +128,11 @@
                 <p>Решение: для решения выпишем все классы вычетов: $$\bar{0} = \{…,-21,-14,-7,0,7,14,21,…}\,$$ $$ \bar{1} = \{…,-20,-13,-6,1,8,15,22,…}\,$$ \bar{2} = \{…,-19,-12,-5,2,9,16,23,…}\,$$ $$ \bar{3} = \{…,-18,-11,-4,3,10,17,24,…}\,$$ $$ \bar{4} = \{…,-17,-10,-3,4,11,18,25,…}\,$$ $$ \bar{5} = \{…,-16,-9,-2,5,12,19,26,…}\,$$ $$ \bar{6} = \{…,-15,-8,-1,6,13,20,27,…}\,$$ </p>
 				<p> Можно заметить, что выполняются все три аксиомы группы:<p>
 				<ol start="1">
-					<li>Ассоциативность: она определена на множестве целых чисел, не выходим из множества<\li>
-					<li>Нейтральный элемент: \( \bar{0}+\bar{a}=\bar{a}+\bar{0}=\bar{a} \)<\li>
-					<li>Обратный элемент: \( \bar{1}+\bar{6}=\bar{0} \).<\li>
+					<li>Ассоциативность: она определена на множестве целых чисел, не выходим из множества</li>
+					<li>Нейтральный элемент: \( \bar{0}+\bar{a}=\bar{a}+\bar{0}=\bar{a} \)</li>
+					<li>Обратный элемент: \( \bar{1}+\bar{6}=\bar{0} \).</li>
+					</ol>
+					
 				<img src="images\z4.png" alt="Рисунок к задаче 4">
 			</div>
         </div>	
