--- a/index.html
+++ b/index.html
@@ -125,15 +125,26 @@
             <p>Докажите, что вычет по \(m=7\) является группой.</p>
             <button onclick="toggleAnswer(4)">Ответ</button>
             <div id="answer-4" class="answer">
-                <p>Решение: для решения выпишем все классы вычетов: $$\bar{0} = \{…,-21,-14,-7,0,7,14,21,…}\ $$ $$ \bar{1} = \{…,-20,-13,-6,1,8,15,22,…}\$$ \bar{2} = \{…,-19,-12,-5,2,9,16,23,…}\$$ $$ \bar{3} = \{…,-18,-11,-4,3,10,17,24,…}\$$ $$ \bar{4} = \{…,-17,-10,-3,4,11,18,25,…}\$$ $$ \bar{5} = \{…,-16,-9,-2,5,12,19,26,…}\$$ $$ \bar{6} = \{…,-15,-8,-1,6,13,20,27,…}\$$ </p>
+                <p>Решение: для решения выпишем все классы вычетов: $$ \bar{0} = \{…,-21,-14,-7,0,7,14,21,…}\ $$ $$ \bar{1} = \{…,-20,-13,-6,1,8,15,22,…}\$$ \bar{2} = \{…,-19,-12,-5,2,9,16,23,…}\$$ $$ \bar{3} = \{…,-18,-11,-4,3,10,17,24,…}\$$ $$ \bar{4} = \{…,-17,-10,-3,4,11,18,25,…}\$$ $$ \bar{5} = \{…,-16,-9,-2,5,12,19,26,…}\$$ $$ \bar{6} = \{…,-15,-8,-1,6,13,20,27,…}\$$ </p>
+				<p> $$ \bar{0} = \{…,-21,-14,-7,0,7,14,21,…}\ $$</p>
+				
 				<img src="images\z4.png" alt="Рисунок к задаче 4">
-				<p> Можно заметить, что выполняются все три аксиомы группы:<p>
+				<p> Можно заметить, что выполняются все три аксиомы группы:</p>
 				<ol start="1">
 					<li>Ассоциативность: она определена на множестве целых чисел, не выходим из множества</li>
 					<li>Нейтральный элемент: \( \bar{0}+\bar{a}=\bar{a}+\bar{0}=\bar{a} \)</li>
 					<li>Обратный элемент: \( \bar{1}+\bar{6}=\bar{0} \).</li>
 					</ol>
-				<p>Следовательно, вычет по модулю 7 является группой, так как выполняются аксиомы групп.<p>
+				<p>Следовательно, вычет по модулю 7 является группой, так как выполняются аксиомы групп.</p>
+			</div>
+        </div>
+		<!-- Пример задачи 5 -->
+        <div class="task">
+            <h3>Задача 5 (математическая логика, формулы алгебры логики)</h3>
+            <p>Трое друзей, Дима, Никита, Петя спорили о результатах лошадиных скачек. Дима сказал: «Старый Бегун не придет первым! Первым будет Быстрый Хвост.». Никита ответил Диме: «Нет, победителем будет Старый Бегун. А Облачный Пегас – не конкурент для него.». Петя возмутился: «Быстрому Хвосту не видать первого места, а вот Облачный Пегас - самая быстрая лошадь на трассе.» По завершении скачек оказалось, что каждое из двух предположений двоих друзей подтвердилось, а оба предположения третьего из друзей оказались неверны. Кто выиграл скачки?</p>
+            <button onclick="toggleAnswer(5)">Ответ</button>
+            <div id="answer-5" class="answer">
+                <p>Решение:  </p>
 			</div>
         </div>	
     </div>
