--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <p>Трое друзей, Дима, Никита, Петя спорили о результатах лошадиных скачек. Дима сказал: «Старый Бегун не придет первым! Первым будет Быстрый Хвост.». Никита ответил Диме: «Нет, победителем будет Старый Бегун. А Облачный Пегас – не конкурент для него.». Петя возмутился: «Быстрому Хвосту не видать первого места, а вот Облачный Пегас - самая быстрая лошадь на трассе.» По завершении скачек оказалось, что каждое из двух предположений двоих друзей подтвердилось, а оба предположения третьего из друзей оказались неверны. Кто выиграл скачки?</p>
             <button onclick="toggleAnswer(5)">Ответ</button>
             <div id="answer-5" class="answer">
-                <p>Решение:  </p>
+                <p>Решение: введём обозначения для высказываний. С – победит Старый Бегун, О – победит Облачный Пегас, Б – победит Быстрый Хвост. Перепишем высказывания ребят на языке алгебры логики. \( Дима: \bar{С} \cdot Б, Никита: С \cdot \bar{О}, Петя: Дима: \bar{Б}. </p>
 			</div>
         </div>	
     </div>
