--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
             <button onclick="toggleAnswer(5)">Ответ</button>
             <div id="answer-5" class="answer">
                 <p>Решение: введём обозначения для высказываний. С – победит Старый Бегун, О – победит Облачный Пегас, Б – победит Быстрый Хвост. Перепишем высказывания ребят на языке алгебры логики. \( Дима: \bar{С} \cdot Б, Никита: С \cdot \bar{О}, Петя: Дима: \bar{Б}\). </p>
+				<p> Запишем формулу с учётом условия задачи о верности их предположений. $$ (\bar{C} \cdot Б) \cdot (С \cdot \bar{О}) \cdot \bar{\bar{Б}} + (\bar{C} \cdot Б) \cdot (\bar{С \cdot \bar{О}}) \cdot \bar{Б} + (\bar{\bar{О} \cdot Б}) \cdot (С \cdot \bar{О}) \cdot \bar{Б} = (С + \bar{Б}) \cdot С \cdot \bar{О} \cdot \bar{Б} = С \cdot \bar{О} \cdot \bar{Б}.$$  Поэтапно упрощённое высказывание истинно только при С=1,О=0,Б=0. Поэтому победил Старый Бегун.</p>
 			</div>
         </div>	
     </div>
