--- a/index.html
+++ b/index.html
@@ -144,6 +144,16 @@
             <p>Трое друзей, Дима, Никита, Петя спорили о результатах лошадиных скачек. Дима сказал: «Старый Бегун не придет первым! Первым будет Быстрый Хвост.». Никита ответил Диме: «Нет, победителем будет Старый Бегун. А Облачный Пегас – не конкурент для него.». Петя возмутился: «Быстрому Хвосту не видать первого места, а вот Облачный Пегас - самая быстрая лошадь на трассе.» По завершении скачек оказалось, что каждое из двух предположений двоих друзей подтвердилось, а оба предположения третьего из друзей оказались неверны. Кто выиграл скачки?</p>
             <button onclick="toggleAnswer(5)">Ответ</button>
             <div id="answer-5" class="answer">
+                <p>Решение: введём обозначения для высказываний. C – победит Старый Бегун, O – победит Облачный Пегас, B – победит Быстрый Хвост. Перепишем высказывания ребят на языке алгебры логики. \( Дима: \bar{C} \cdot B, Никита: C \cdot \bar{O}, Петя: Дима: \bar{B}\). </p>
+				<p> Запишем формулу с учётом условия задачи о верности их предположений. $$ (\bar{C} \cdot B) \cdot (C \cdot \bar{O}) \cdot \bar{\bar{B}} + (\bar{C} \cdot B) \cdot (\bar{C \cdot \bar{O}}) \cdot \bar{B} + (\bar{\bar{O} \cdot B}) \cdot (C \cdot \bar{O}) \cdot \bar{B} = (C + \bar{B}) \cdot C \cdot \bar{O} \cdot \bar{B} = C \cdot \bar{O} \cdot \bar{B}.$$  Поэтапно упрощённое высказывание истинно только при \( C=1,O=0,B=0 \). Поэтому победил Старый Бегун.</p>
+			</div>
+        </div>
+		<!-- Пример задачи 6 -->
+        <div class="task">
+            <h3>Задача 6 (математическая логика, формулы алгебры логики)</h3>
+            <p>Центром правильного треугольника ABC явялется точка O. Докажите, что где бы не находилась точка M на плоскости, то справедливо равенство </p>
+            <button onclick="toggleAnswer(6)">Ответ</button>
+            <div id="answer-6" class="answer">
                 <p>Решение: введём обозначения для высказываний. С – победит Старый Бегун, О – победит Облачный Пегас, Б – победит Быстрый Хвост. Перепишем высказывания ребят на языке алгебры логики. \( Дима: \bar{С} \cdot Б, Никита: С \cdot \bar{О}, Петя: Дима: \bar{Б}\). </p>
 				<p> Запишем формулу с учётом условия задачи о верности их предположений. $$ (\bar{C} \cdot Б) \cdot (С \cdot \bar{О}) \cdot \bar{\bar{Б}} + (\bar{C} \cdot Б) \cdot (\bar{С \cdot \bar{О}}) \cdot \bar{Б} + (\bar{\bar{О} \cdot Б}) \cdot (С \cdot \bar{О}) \cdot \bar{Б} = (С + \bar{Б}) \cdot С \cdot \bar{О} \cdot \bar{Б} = С \cdot \bar{О} \cdot \bar{Б}.$$  Поэтапно упрощённое высказывание истинно только при С=1,О=0,Б=0. Поэтому победил Старый Бегун.</p>
 			</div>
