--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 		<!-- Пример задачи 6 -->
         <div class="task">
             <h3>Задача 6 (математическая логика, формулы алгебры логики)</h3>
-            <p>Центром правильного треугольника ABC явялется точка O. Докажите, что где бы не находилась точка M на плоскости, то справедливо равенство </p>
+            <p>Центром правильного треугольника ABC явялется точка O. Докажите, что где бы не находилась точка M на плоскости, то справедливо равенство \( \overrightarrow{MO}=\frac{1}{3}(\overrightarrow{MA}+\overrightarrow{MB}+\overrightarrow{MC}). \)</p>
             <button onclick="toggleAnswer(6)">Ответ</button>
             <div id="answer-6" class="answer">
                 <p>Решение: введём обозначения для высказываний. С – победит Старый Бегун, О – победит Облачный Пегас, Б – победит Быстрый Хвост. Перепишем высказывания ребят на языке алгебры логики. \( Дима: \bar{С} \cdot Б, Никита: С \cdot \bar{О}, Петя: Дима: \bar{Б}\). </p>
