--- a/index.html
+++ b/index.html
@@ -161,8 +161,18 @@
         <div class="task">
             <h3>Задача 7 (гомотетия)</h3>
             <p>Заданы две окружности, которые касаются в точке H снаружи. Прямая AB касается первой окружности в точке A, а второй окружности в точке B. Прямая BK пересекает первую окружность в точке D, а прямая AK пересекает вторую окружность в точке C. Докажите, что Докажите, что AD и BC параллельны.</p>
-            <button onclick="toggleAnswer(6)">Ответ</button>
-            <div id="answer-6" class="answer">
+            <button onclick="toggleAnswer(7)">Ответ</button>
+            <div id="answer-7" class="answer">
+                <img src="images\z7.png" alt="Рисунок к задаче 7">
+				<p>Решение: рассмотрим гомотетию с центром в точке H. Можем утверждать, что существует гомотетия с отрицательным коэффициентом. Конструкция из вписанного треугольника и окружности переходит в правую конструкцию: по свойствам гомотетии окружность переходит в окружность, отрезок переходит в параллельный отрезок. То есть, AD и BC параллельны.</p>
+			</div>
+        </div>
+		<!-- Пример задачи 8 -->
+        <div class="task">
+            <h3>Задача 8 (гомотетия)</h3>
+            <p>Заданы две окружности, которые касаются в точке H снаружи. Прямая AB касается первой окружности в точке A, а второй окружности в точке B. Прямая BK пересекает первую окружность в точке D, а прямая AK пересекает вторую окружность в точке C. Докажите, что Докажите, что AD и BC параллельны.</p>
+            <button onclick="toggleAnswer(8)">Ответ</button>
+            <div id="answer-8" class="answer">
                 <img src="images\z7.png" alt="Рисунок к задаче 7">
 				<p>Решение: рассмотрим гомотетию с центром в точке H. Можем утверждать, что существует гомотетия с отрицательным коэффициентом. Конструкция из вписанного треугольника и окружности переходит в правую конструкцию: по свойствам гомотетии окружность переходит в окружность, отрезок переходит в параллельный отрезок. То есть, AD и BC параллельны.</p>
 			</div>
