--- a/index.html
+++ b/index.html
@@ -170,11 +170,10 @@
 		<!-- Пример задачи 8 -->
         <div class="task">
             <h3>Задача 8 (гомотетия)</h3>
-            <p>Заданы две окружности, которые касаются в точке H снаружи. Прямая AB касается первой окружности в точке A, а второй окружности в точке B. Прямая BK пересекает первую окружность в точке D, а прямая AK пересекает вторую окружность в точке C. Докажите, что Докажите, что AD и BC параллельны.</p>
+            <p>В треугольнике высота, биссектриса и медиана проведены из вершины одного угла. Они делят угол на четыре равные части. Докажите, что треугольник прямоугольный.</p>
             <button onclick="toggleAnswer(8)">Ответ</button>
             <div id="answer-8" class="answer">
-                <img src="images\z7.png" alt="Рисунок к задаче 7">
-				<p>Решение: рассмотрим гомотетию с центром в точке H. Можем утверждать, что существует гомотетия с отрицательным коэффициентом. Конструкция из вписанного треугольника и окружности переходит в правую конструкцию: по свойствам гомотетии окружность переходит в окружность, отрезок переходит в параллельный отрезок. То есть, AD и BC параллельны.</p>
+				<p>Решение: пусть точка O центр описанной окружности, тогда она должна лежать на серединном перпендикуляре к отрезку AC. Рассмотрим биссектрису: лучи BH и BM симметричны относительно биссектрисы. Тогда, пользуясь тем, что ортоцентр и центр описанной окружности сопряжены, выводим, что точка O должна лежать на прямой BM. Тогда центр окружности лежит на середине стороны AC. Следовательно ABC прямоугольный треугольник.</p>
 			</div>
         </div>
     </div>
