--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </div>
 		<!-- Пример задачи 3 -->
         <div class="task">
-            <h3>Задача 3 (Метод сложения)</h3>
+            <h3>Задача 3 (метод сложения)</h3>
             <p>Найдите решения системы: $$\left\{ \begin{array}{cl} a(b+c)=35, \\ b(a+c)=32, \\ c(a+b)=27. \end{array} \right.$$</p>
             <button onclick="toggleAnswer(3)">Ответ</button>
             <div id="answer-3" class="answer">
@@ -121,7 +121,7 @@
         </div>
 		<!-- Пример задачи 4 -->
         <div class="task">
-            <h3>Задача 4 (Классы вычетов, сравнимость)</h3>
+            <h3>Задача 4 (классы вычетов, сравнимость)</h3>
             <p>Докажите, что вычет по \(m=7\) является группой.</p>
             <button onclick="toggleAnswer(4)">Ответ</button>
             <div id="answer-4" class="answer">
@@ -173,6 +173,15 @@
             <p>В треугольнике высота, биссектриса и медиана проведены из вершины одного угла. Они делят угол на четыре равные части. Докажите, что треугольник прямоугольный.</p>
             <button onclick="toggleAnswer(8)">Ответ</button>
             <div id="answer-8" class="answer">
+				<p>Решение: пусть точка O центр описанной окружности, тогда она должна лежать на серединном перпендикуляре к отрезку AC. Рассмотрим биссектрису: лучи BH и BM симметричны относительно биссектрисы. Тогда, пользуясь тем, что ортоцентр и центр описанной окружности сопряжены, выводим, что точка O должна лежать на прямой BM. Тогда центр окружности лежит на середине стороны AC. Следовательно ABC прямоугольный треугольник.</p>
+			</div>
+        </div>
+		<!-- Пример задачи 9 -->
+        <div class="task">
+            <h3>Задача 9 (неравенство Коши-Буняковского)</h3>
+            <p>Докажите, что \( a^{2}+b^{2}+c^{2}\ge \frac{1}{3}\), если \(a+b+c=1.\) </p>
+            <button onclick="toggleAnswer(9)">Ответ</button>
+            <div id="answer-9" class="answer">
 				<p>Решение: пусть точка O центр описанной окружности, тогда она должна лежать на серединном перпендикуляре к отрезку AC. Рассмотрим биссектрису: лучи BH и BM симметричны относительно биссектрисы. Тогда, пользуясь тем, что ортоцентр и центр описанной окружности сопряжены, выводим, что точка O должна лежать на прямой BM. Тогда центр окружности лежит на середине стороны AC. Следовательно ABC прямоугольный треугольник.</p>
 			</div>
         </div>
