--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <p>Докажите, что \( a^{2}+b^{2}+c^{2}\ge \frac{1}{3}\), если \(a+b+c=1.\) </p>
             <button onclick="toggleAnswer(9)">Ответ</button>
             <div id="answer-9" class="answer">
-				<p>Решение: пусть точка O центр описанной окружности, тогда она должна лежать на серединном перпендикуляре к отрезку AC. Рассмотрим биссектрису: лучи BH и BM симметричны относительно биссектрисы. Тогда, пользуясь тем, что ортоцентр и центр описанной окружности сопряжены, выводим, что точка O должна лежать на прямой BM. Тогда центр окружности лежит на середине стороны AC. Следовательно ABC прямоугольный треугольник.</p>
+				<p>Решение: применим неравенство Коши. $$ a \cdot 1 +b \cdot 1 +c \cdot 1 = 1\le \sqrt{a^{2}+b^{2}+c^{2}} \: \cdot \sqrt{1^{2}+1^{2}+1^{2}}=\sqrt{3} \: \cdot \sqrt{a^{2}+b^{2}+c^{2}} $$ Что и требовалось доказать. </p>
 			</div>
         </div>
     </div>
