--- a/index.html
+++ b/index.html
@@ -185,6 +185,24 @@
 				<p>Решение: применим неравенство Коши. $$ a \cdot 1 +b \cdot 1 +c \cdot 1 = 1\le \sqrt{a^{2}+b^{2}+c^{2}} \: \cdot \sqrt{1^{2}+1^{2}+1^{2}}=\sqrt{3} \: \cdot \sqrt{a^{2}+b^{2}+c^{2}} $$ Что и требовалось доказать. </p>
 			</div>
         </div>
+		<!-- Пример задачи 10 -->
+        <div class="task">
+            <h3>Задача 10 (векторы, неравенство Коши-Буняковского)</h3>
+            <p>Найдите решение системы: $$\left\{ \begin{array}{cl} a-2b+3z=15, \\ a^2+b^2+z^2. \end{array} \right.$$</p>
+            <button onclick="toggleAnswer(10)">Ответ</button>
+            <div id="answer-10" class="answer">
+				<p>Решение: обозначим за \( \overrightarrow{x}=(a,b,c),\ \overrightarrow{y}=(1,-2,3).\)  Тогда скалярное произведение векторов равно \(  \overrightarrow{x}\cdot\overrightarrow{y}=15,\ \left| \overrightarrow{a} \right|=4,\ \left| \overrightarrow{y} \right|=\sqrt{14}. Получили противоречие неравенству Коши-Буняковского. Скалярное произведение больше, чем произведение длин векторов. Значит, система не имеет решений.\) </p>
+			</div>
+        </div>
+		<!-- Пример задачи 11 -->
+        <div class="task">
+            <h3>Задача 11 (остаток от деления)</h3>
+            <p>Докажите, что многочлен \( ax^2+bx+c \) с целыми коэффициентами, не может иметь дискриминант равным 15.</p>
+            <button onclick="toggleAnswer(11)">Ответ</button>
+            <div id="answer-11" class="answer">
+				<p>Решение: обозначим за \( \overrightarrow{x}=(a,b,c),\ \overrightarrow{y}=(1,-2,3).\)  Тогда скалярное произведение векторов равно \(  \overrightarrow{x}\cdot\overrightarrow{y}=15,\ \left| \overrightarrow{a} \right|=4,\ \left| \overrightarrow{y} \right|=\sqrt{14}. Получили противоречие неравенству Коши-Буняковского. Скалярное произведение больше, чем произведение длин векторов. Значит, система не имеет решений.\) </p>
+			</div>
+        </div>
     </div>
 		<!-- Пример задачи 3 -->
         <div class="task">
