--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <p>Докажите, что многочлен \( ax^2+bx+c \) с целыми коэффициентами, не может иметь дискриминант равным 15.</p>
             <button onclick="toggleAnswer(11)">Ответ</button>
             <div id="answer-11" class="answer">
-				<p>Решение: обозначим за \( \overrightarrow{x}=(a,b,c),\ \overrightarrow{y}=(1,-2,3).\)  Тогда скалярное произведение векторов равно \(  \overrightarrow{x}\cdot\overrightarrow{y}=15,\ \left| \overrightarrow{a} \right|=4,\ \left| \overrightarrow{y} \right|=\sqrt{14}. Получили противоречие неравенству Коши-Буняковского. Скалярное произведение больше, чем произведение длин векторов. Значит, система не имеет решений.\) </p>
+				<p>Решение: допустим, что существуют такие целые коэффициенты, что \( D=b^2-4ac=15 \). Тогда средняя часть равенства при делении должна давать остатки 0 или 1, а правая 3. Следовательно, равенство невозможно.</p>
 			</div>
         </div>
     </div>
