--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <p>Найдите решение системы: $$\left\{ \begin{array}{cl} a-2b+3z=15, \\ a^2+b^2+z^2. \end{array} \right.$$</p>
             <button onclick="toggleAnswer(10)">Ответ</button>
             <div id="answer-10" class="answer">
-				<p>Решение: обозначим за \( \overrightarrow{x}=(a,b,c),\ \overrightarrow{y}=(1,-2,3).\)  Тогда скалярное произведение векторов равно \(  \overrightarrow{x}\cdot\overrightarrow{y}=15,\ \left| \overrightarrow{a} \right|=4,\ \left| \overrightarrow{y} \right|=\sqrt{14}. Получили противоречие неравенству Коши-Буняковского. Скалярное произведение больше, чем произведение длин векторов. Значит, система не имеет решений.\) </p>
+				<p>Решение: обозначим за \( \overrightarrow{x}=(a,b,c),\ \overrightarrow{y}=(1,-2,3).\)  Тогда скалярное произведение векторов равно \(  \overrightarrow{x}\cdot\overrightarrow{y}=15,\ \left| \overrightarrow{a} \right|=4,\ \left| \overrightarrow{y} \right|=\sqrt{14}.\) Получили противоречие неравенству Коши-Буняковского. Скалярное произведение больше, чем произведение длин векторов. Значит, система не имеет решений.</p>
 			</div>
         </div>
 		<!-- Пример задачи 11 -->
