--- a/index.html
+++ b/index.html
@@ -203,6 +203,15 @@
 				<p>Решение: допустим, что существуют такие целые коэффициенты, что \( D=b^2-4ac=15 \). Тогда средняя часть равенства при делении должна давать остатки 0 или 1, а правая 3. Следовательно, равенство невозможно.</p>
 			</div>
         </div>
+		<!-- Пример задачи 12 -->
+        <div class="task">
+            <h3>Задача 12 (функция Эйлера)</h3>
+            <p>Сколько натуральных, которые меньше 72 и взаимно простых с ним?</p>
+            <button onclick="toggleAnswer(12)">Ответ</button>
+            <div id="answer-12" class="answer">
+				<p>Решение: задача на применение функции Эйлера. Можно организовать перебор или написать программу для вычисления функции Эйлера по определению. В результате получим, что таких чисел 24.</p>
+			</div>
+        </div>
     </div>
 		<!-- Пример задачи 3 -->
         <div class="task">
