--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 		<!-- Пример задачи 13 -->
         <div class="task">
             <h3>Задача 13 (бином Ньютона, треугольник Паскаля)</h3>
-            <p>Возведите выражение в четвёртую степень, используя треугольник Паскаля: \((2x+\frac{3}{x})\)</p>
+            <p>Возведите выражение в четвёртую степень, используя треугольник Паскаля: \((2x+\frac{3}{x})\).</p>
             <button onclick="toggleAnswer(12)">Ответ</button>
             <div id="answer-12" class="answer">
 				<p>Решение: задача на применение функции Эйлера. Можно организовать перебор или написать программу для вычисления функции Эйлера по определению. В результате получим, что таких чисел 24.</p>
