--- a/index.html
+++ b/index.html
@@ -216,9 +216,10 @@
         <div class="task">
             <h3>Задача 13 (бином Ньютона, треугольник Паскаля)</h3>
             <p>Возведите выражение в четвёртую степень, используя треугольник Паскаля: \((2x+\frac{3}{x})\).</p>
-            <button onclick="toggleAnswer(12)">Ответ</button>
-            <div id="answer-12" class="answer">
-				<p>Решение: задача на применение функции Эйлера. Можно организовать перебор или написать программу для вычисления функции Эйлера по определению. В результате получим, что таких чисел 24.</p>
+            <button onclick="toggleAnswer(13)">Ответ</button>
+            <div id="answer-13" class="answer">
+				<p>Решение: определим a, b, n для выражения \( (a+b)^n \to a=2x,\ b=\frac{3}{x},\ n=4. \) Применим пятый ряд треугольника Паскаля (1, 4, 6, 4, 1). Получим:</p>
+				<p> $$(2x+\frac{3}{x})=1(2x)^4+4(2x)^3(\frac{3}{x})^1+6(2x)^2(\frac{3}{x})^2+4(2x)^1(\frac{3}{x})^3+1(\frac{3}{x})^4=16x^4+96x^2+216+216z^{-2}+81z^{-4}.$$</p>
 			</div>
         </div>
     </div>
