--- a/index.html
+++ b/index.html
@@ -222,6 +222,26 @@
 				<p> $$(2x+\frac{3}{x})=1(2x)^4+4(2x)^3(\frac{3}{x})^1+6(2x)^2(\frac{3}{x})^2+4(2x)^1(\frac{3}{x})^3+1(\frac{3}{x})^4=16x^4+96x^2+216+216z^{-2}+81z^{-4}.$$</p>
 			</div>
         </div>
+		<!-- Пример задачи 14 -->
+        <div class="task">
+            <h3>Задача 14 (игры и стратегии, анализ с конца)</h3>
+            <p>Боря и Гена играют в игру. Они по очереди строят башни из 25 одинаковых кирпичей размера 5×14×17, каждый раз добавляя сверху по одному кирпичу (каждый новый кирпич добавляет 5, 14 или 17 к высоте текущей башни), причем ход игрока засчитывается только в том случае, когда высота построенной им башни не совпадает с высотами уже построенных ранее. Проигрывает тот, кто не сможет сделать ход. Первым или вторым игроком должен быть Боря, чтобы гарантированно выиграть?</p>
+            <button onclick="toggleAnswer(13)">Ответ</button>
+            <div id="answer-13" class="answer">
+				<p>по сути, требуется найти количество разных по высоте башен, которые возможно построить из данного набора кирпичей. И, если это количество будет четно, то Бао должен ходить вторым, а, если нечетное, то первым. 
+Мысленно уменьшим длину, ширину и высоту каждого кирпича на 5: с 5×14×17 до 0×9×12. Тогда суммарная высота потенциальной башни уменьшится на 25∙5, но число разных по высоте башен, составленных из новых кирпичей, будет совпадать с числом разных по высоте башен из старых. 
+Уменьшим теперь размеры кирпичей в три раза: с 0×9×12 до 0×3×4. Размеры потенциальных башен уменьшатся также в три раза, а число разных по высоте башен вновь не изменится. 
+Таким образом, исходная задача равносильна следующей: сколько различных значений можно получить, складывая числа 0, 3 и 4 в количестве 25?
+Заметим, что если в сумме хотя бы четыре раза встречается число 3, то набор 3, 3, 3, 3 можно заменить на набор 4, 4, 4, 0; при этой замене и сумма, и количество чисел сохраняется. Значит, можно рассматривать лишь те суммы, где число 3 встречается не более трех раз. 
+Если число 3 встречается 0 раз, то возможны 26 различных значений суммы: 0,4,8,...,4∙25. 
+Если число 3 встречается 1 раз, то возможны 25 различных значений суммы: 3,3 + 4,3 + 8,...,3 + 4∙24. 
+Если число 3 встречается 2 раза, то возможны 24 различные значения суммы: 6,6 + 4,6 + 8,...,6 + 4 *23. 
+Если число 3 встречается 3 раза, то возможны 23 различные значения суммы: 9,9 + 4,9 + 8,...,9 + 4*22. 
+Значения в первом, втором, третьем и четвертом списке дают остатки при делении на 4 соответственно 0, 3, 2, 1, и потому значения в разных списках разные.
+Итого 26 + 25 + 24 + 23 = 98 возможных значений высоты башни.
+Данное число четное, соответственно Боря должен ходить вторым, чтобы гарантированно победить.</p>
+			</div>
+        </div>
     </div>
 		<!-- Пример задачи 3 -->
         <div class="task">
