--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         </div>
 		<!-- Пример задачи 8 -->
         <div class="task">
-            <h3>Задача 8 (гомотетия)</h3>
+            <h3>Задача 8 (изогональное сопряжение)</h3>
             <p>В треугольнике высота, биссектриса и медиана проведены из вершины одного угла. Они делят угол на четыре равные части. Докажите, что треугольник прямоугольный.</p>
             <button onclick="toggleAnswer(8)">Ответ</button>
             <div id="answer-8" class="answer">
